--- a/.env
+++ b/.env
@@ -37,5 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-#MAILER_DSN=smtps://eya:password@smtp.gmail.com:465
+MAILER_DSN=smtp://cd4f874f0958ff:4267a6b64f773b@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=smtps://cd4f874f0958ff:4267a6b64f773b@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
