--- a/.env
+++ b/.env
@@ -37,6 +37,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://cd4f874f0958ff:4267a6b64f773b@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=smtp://cd4f874f0958ff:4267a6b64f773b@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=gmail://USERNAME:PASSWORD@default?verify_peer=0
 #MAILER_DSN=smtps://cd4f874f0958ff:4267a6b64f773b@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
